fix update master data